# games-launcher

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: gamepad.ts  nav.ts  state.svelte.ts  types.ts  updater.svelte.ts
src/lib/components/: ActionMenu.svelte  SettingsPage.svelte  Sidebar.svelte
src/routes/: +page.svelte
