[package]
name = "games-launcher"
version = "0.1.0"
description = "Minimal fancy launcher for installed Steam & Epic games"
authors = ["Heartwin"]
edition = "2021"

[lib]
name = "games_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
game-detector = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
urlencoding = "2"
keyvalues-parser = "0.2"
winreg = "0.52"
