[package]
name = "games-launcher"
version = "0.2.0"
description = "Minimal fancy launcher for installed Steam & Epic games"
authors = ["Heartwin"]
edition = "2021"

[lib]
name = "games_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
game-detector = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time"] }
urlencoding = "2"
keyvalues-parser = "0.2"
winreg = "0.52"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
futures-util = "0.3"
